# robot-control-framework

./: .gitattributes  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose.yaml  package-lock.json
backend/: .coverage  .gitignore  .python-version  PYTHON.md  WorkSpace.py  main.py  mcp_server.py  opcua.py  pyproject.toml
backend/modules/: OPCUAClient.py  VPC2SPC.py
backend/src/api/websocket/: handlers.py  router.py
backend/src/backend/: app.py
backend/src/backend/geometry/: pointcloud_transport.py  surface_reconstruction.py
backend/src/backend/models/: messages.py  opcua.py  robot.py  server.py  surface.py
backend/src/backend/opcua/: __init__.py  asyncua_discovery.py  discovery.py  method_calls.py  server_connection.py
backend/src/backend/runtime/: action_execution.py  application_service.py  robot_session.py  server_session.py  surface_job.py
backend/src/backend/services/: runtime_registry.py
backend/src/backend/websocket/: __init__.py  router.py  surface_router.py
backend/src/dt_robot_control/: __init__.py
backend/src/dt_robot_control/api/websocket/: handlers.py  router.py
backend/src/dt_robot_control/opcua/: VPC2SPC.py  __init__.py  address_space_helpers.py  endpoints.py  node_manager.py  opcua.py  opcua_client.py  opcua_nodes.py  subhandler.py  subscription_manager.py
backend/src/dt_robot_control/server/: __init__.py  mcp.py
backend/src/dt_robot_control/services/: __init__.py  client_registry.py
backend/src/dt_robot_control/websocket/: __init__.py  handlers.py  router.py
backend/src/dt_robot_control_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/opcua/: client.py  node_finder.py  node_manager.py  opcua.py  opcua_client.py  opcua_nodes.py  subhandler.py  subscription_manager.py
backend/src/services/: client_registry.py
backend/src_old/opcua/: opcua.py
backend/templates/: children_fragment.html  device_set.html  tree_to_node_fragment.html
backend/tests/: test_application_service.py  test_asyncua_discovery.py  test_messages.py  test_method_calls.py  test_robot_models.py  test_runtime_registry.py  test_surface_websocket_router.py  test_websocket_router.py
backend/tests/unit/: test_address_space_helpers.py  test_client_registry.py  test_endpoints.py  test_mcp_server.py  test_node_manager.py  test_opcua_client.py  test_subhandler.py  test_subscription_manager.py  test_websocket_handlers.py  test_websocket_router.py
backend/urdf/eva_description/urdf/: eva_description.urdf
backend/urdf/fr3_description/: CMakeLists.txt
backend/urdf/ur5_description/ur5_moveit_config/config/: ur5.srdf  ur5.urdf.xacro
docs/: README.md  architecture.md  data-and-interface-model.md  development.md  features.md  websocket-messages.md
frontend/: .gitignore  .npmrc  .proxyrc.js  CODE_REVIEW.md  README.md  component-logic-flow.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-react/: README.md
frontend-react/backend/: main.py  mcp_server.py  opcua.py  pyproject.toml
frontend-react/backend/modules/: GetAddressSpace.py
frontend-react/frontend/: .gitignore  eslint.config.js  package-lock.json  vite.config.ts
frontend/docs/: architecture.md
frontend/src/: App.css  App.tsx  URDFIKManipulator.js  device_set_style.css  (+14 more)
urdf-loaders/: index.html  main.py  redirect.9e0f3bb7.js  redirect.9e0f3bb7.js.map  robot_registry.json  roboto.css  src.a2b27638.js  src.a2b27638.js.map  styles.8986bff4.css  styles.8986bff4.css.map  styles.8986bff4.js  webcomponents-bundle.js
urdf-loaders/urdf/fr3_description/: package.xml
urdf/eva_description/: CMakeLists.txt  desktop.ini  package.xml
urdf/eva_description/collision_meshes/: gripper_1.STL  model_0.STL  model_1.STL  model_3.STL  model_4.STL  model_5.STL
urdf/eva_description/meshes/: gripper_1.dae  gripper_2.dae  model_0.dae  model_1.dae  model_2.dae  model_3.dae  model_4.dae  model_5.dae  model_6.dae
urdf/eva_description/old_meshes/: adapter.STL  gripper_2.STL  gripper_silver.STL  head_buttons.STL  head_grey.STL  head_white.STL  letters_0.STL  model1_grey.STL  model1_white.STL  model2_grey.STL  model2_white.STL  model3_grey.STL  model3_white.STL  model6_grey.STL  model_2.STL  model_6.STL
urdf/eva_description/urdf/: eva_description.csv  eva_description.urdf
webskillcompostion2/: .gitignore  README.md
(+426 files in other folders)
