[project]
name = "dt-robot-control-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncua>=1.1.6",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ollmcp>=0.17.0",
    "ompl>=1.7.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "trimesh>=4.11.1",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",

]
[project.optional-dependencies]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "httpx>=0.28.1,<0.29.0"
]
lint = [
    "ruff>=0.14.9,<0.15.0"
]

typecheck = [
    "mypy>=1.19.1,<2.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["__pycache__", ".venv", "venv", "src_old", "tests"]
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]


[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
