[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webskillcomposition-backend"
version = "0.1.0"
description = "Contract-first backend skeleton for WebSkillComposition"
requires-python = ">=3.12"
dependencies = [
    "asyncua>=1.1.6,<2.0",
    "fastapi>=0.116,<1.0",
    "numpy>=2.0,<3.0",
    "pydantic>=2.11,<3.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
backend = "backend.app:main"
main = "backend.app:main"

[project.optional-dependencies]
test = [
    "httpx>=0.28,<0.29",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.3,<2.0",
]
surface = [
    "scipy>=1.13,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
