[project]
name = "dt-robot-control-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncua>=1.1.6",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "ollmcp>=0.17.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
