<?xml version="1.0"?>
<package format="3">
  <name>fr3_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Franka Research 3. Based on https://github.com/frankaemika/franka_description
  </description>
  <author>Finn Winter</author>
  <maintainer email="finn.winter@stud.tu-darmstadt.de" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
